# planefyi

./: README.md  demo.tape  pyproject.toml
src/planefyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_basic.py
